--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,11 @@ asgiref==3.3.1
 Django==3.1.7
 django-faker==0.2
 djangorestframework==3.12.2
+factory-boy==3.2.0
 fake-factory==9999.9.9
+Faker==6.6.0
+python-dateutil==2.8.1
 pytz==2021.1
+six==1.15.0
 sqlparse==0.4.1
+text-unidecode==1.3
